# quickleaf

./: .gitignore  ADVANCED_OPTIMIZATIONS.md  Cargo.toml  IMPLEMENTATION_STATUS.md  OPTIMIZATION_ANALYSIS.md  OPTIMIZATION_FINAL.md  OPTIMIZATION_FINAL_REPORT.md  OPTIMIZATION_REPORT.md  PERFORMANCE_REPORT.md  README.md  README.md.backup  benchmark_results.txt  fix_docs.sh
.github/workflows/: publish.yml
benches/: README.md  quickleaf_bench.rs
examples/: cache_performance_analysis.rs  pagination_demo.rs  parquet_example.rs  performance_test.rs  test_persist.rs  ttl_example.rs  tui_interactive.rs
src/: cache.rs  cache_backup.rs  cache_no_prefetch.rs  cache_optimized.rs  error.rs  event.rs  fast_filters.rs  filter.rs  filters.rs  lib.rs  list_props.rs  parquet_store.rs  parquet_store_v2.rs  persist_tests.rs  prefetch.rs  prelude.rs  quickleaf.rs  sqlite_store.rs  string_pool.rs  tests.rs  ttl_tests.rs
