[package]
name = "quickleaf"
version = "0.4.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Philippe Assis <codephilippe@gmail.com>"]
description = "A simple and efficient in-memory cache with support for filtering, ordering, limiting results, event notifications and eventual persistence"
keywords = ["cache", "in-memory", "filter", "order", "limit"]
documentation = "https://docs.rs/quickleaf"
categories = ["caching", "data-structures"]
repository = "https://github.com/lowcarboncode/quickleaf"
readme = "README.md"

[dependencies]
valu3 = "0.8.2"

# Optional dependencies for examples
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.29", optional = true }

# Optional dependencies for persist feature
rusqlite = { version = "0.37", features = ["bundled"], optional = true }

[features]
default = []
event = []
persist = ["dep:rusqlite"]
tui-example = ["dep:ratatui", "dep:crossterm", "persist"]
