[package]
name = "quickleaf"
version = "0.4.2"
edition = "2021"
license = "Apache-2.0"
authors = ["Philippe Assis <codephilippe@gmail.com>"]
description = "A simple and efficient in-memory cache with support for filtering, ordering, limiting results, event notifications and eventual persistence"
keywords = ["cache", "persistence", "filter", "order", "limit"]
documentation = "https://docs.rs/quickleaf"
categories = ["caching", "data-structures"]
repository = "https://github.com/lowcarboncode/quickleaf"
readme = "README.md"

[dependencies]
valu3 = "0.8.2"
hashbrown = "0.15.5"
indexmap = "2.7"
libc = "0.2"

# Optional dependencies for examples
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.29", optional = true }

# Optional dependencies for persist feature
rusqlite = { version = "0.37", features = ["bundled"], optional = true }

[features]
default = ["persist"]
event = []
persist = ["dep:rusqlite"]
tui-example = ["dep:ratatui", "dep:crossterm", "persist"]

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }

[[bench]]
name = "quickleaf_bench"
harness = false
